--- a/package.json
+++ b/package.json
@@ -14,22 +14,33 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@googlemaps/polyline-codec": "^1.0.28",
+    "@mapbox/polyline": "^1.2.1",
     "@react-navigation/native": "^6.0.2",
+    "axios": "^1.6.5",
     "expo": "~49.0.15",
     "expo-font": "~11.4.0",
+    "expo-gl": "~13.0.1",
     "expo-linking": "~5.0.2",
+    "expo-location": "~16.1.0",
     "expo-router": "^2.0.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
+    "firebase": "^10.7.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-maps": "1.7.1",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-maps-navigation": "^0.0.14",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-image": "~1.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -37,6 +48,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~49.0.0",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
   },
   "overrides": {
